Tweaks for logging in app.ini

--- a/app.ini
+++ b/app.ini
@@ -212,16 +212,18 @@ MAX_FILES = 5
 FORMAT =
 
 [log]
-ROOT_PATH =
-MODE = console
+; KEEP THIS PATH!
+ROOT_PATH = /var/log/gitea
+MODE = file
 BUFFER_LEN = 10000
-LEVEL = Trace
+;General log level. [Trace, Debug, Info, Warn, Error, Critical]
+LEVEL = Warn
 
 [log.console]
-LEVEL =
+LEVEL = Warn
 
 [log.file]
-LEVEL =
+LEVEL = Warn
 LOG_ROTATE = true
 MAX_LINES = 1000000
 MAX_SIZE_SHIFT = 28
@@ -229,14 +231,14 @@ DAILY_ROTATE = true
 MAX_DAYS = 7
 
 [log.conn]
-LEVEL =
+LEVEL = Error
 RECONNECT_ON_MSG = false
 RECONNECT = false
 PROTOCOL = tcp
 ADDR =
 
 [log.smtp]
-LEVEL =
+LEVEL = Error
 SUBJECT = Diagnostic message from server
 HOST =
 USER =
@@ -244,7 +246,7 @@ PASSWD =
 RECEIVERS =
 
 [log.database]
-LEVEL =
+LEVEL = Error
 DRIVER =
 CONN =
 
