--- a/gitea.service
+++ b/gitea.service
@@ -2,10 +2,10 @@
 Description=Gitea (Git with a cup of tea)
 After=syslog.target
 After=network.target
-After=mysqld.service
-#After=postgresql.service
-#After=memcached.service
-#After=redis.service
+Requires=mysqld.service
+#Requires==postgresql.service
+#Requires==memcached.service
+#Requires==redis.service
 
 [Service]
 Type=simple
